--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,25 @@
 body {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   margin: 0 auto;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+.container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 100%;
+  width: 1440px;
+  margin: 0 auto;
+  padding: 0 auto;
+}
 
 .site-header {
-  width: 1440px;
-  height: 97.94px;
   display: flex;
   background-color: #fff;
 }
@@ -43,10 +53,7 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin-right: 170px;
-  margin-left: 170px;
-}
-
+ }
 
 .sitenav-list {
   width: 497px;
@@ -122,23 +129,35 @@ body {
   opacity: 0.6;
 }
 
+.main-link-outline {
+  box-sizing: border-box;
+  border: 2px solid #fff;
+  background-color: transparent;
+  color: #fff;
+}
+
+.main-link-outline:hover{
+  border-color: transparent;
+  background-color: #DE2E54;
+  color: #fff;
+}
+
 .hero {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 1440px;
-  height: 533px;
   color: #fff;
   background-color: #0EB4C1;
+}
+
+.hero-inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 1100px;
 }
 
 .hero-content {
   width: 500px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  margin-left: 170px;
-  margin-right: 0px;
 }
 
 .hero-heading {
@@ -170,16 +189,12 @@ body {
 .hero-img {
   width: 423px;
   height: 504px;
-  margin-right: 170px;
-  margin-top: 29px;
+  padding: 29px 0 0;
 }
 
 .services {
   display: flex;
   flex-direction: column;
-  width: 1440px;
-  height: 1486px;
-  align-items: center;
   background-color: #fff;
 }
 
@@ -201,8 +216,6 @@ body {
 }
 
 .services-list {
-  width: 864px;
-  height: 200px;
   display: flex;
   flex-direction: row;
 }
@@ -240,76 +253,46 @@ body {
 }
 
 .cta {
-  width: 1440px;
-  height: 253px;
   color: #fff;
   background-color: #0EB4C1;
 }
 
+.cta-inner {
+  padding-top: 64px;
+  padding-bottom: 64px;
+}
+
 #cta-heading {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
   font-size: 36px;
   font-weight: 700;
   font-family: "Open Sans Condensed", sans-serif;
   line-height: 1.2;
-  padding-top: 64px;
   margin: 0;
 }
 
-.cta a {
-  border: 2px solid #fff;
-  font-family: "Open Sans Condensed", sans-serif;
-  font-size: 15px;
-  font-weight: 700;
-  line-height: 1.2;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 8px;
-  color: #fff;
-  text-decoration: none;
-  padding: 12px 24px;
 
-}
-
-.cta-link {
-  height: 42px;
-  justify-content: space-between;
+.cta-links {
   display: flex;
-  flex-direction: row;
-  align-items: center;
   font-weight: 700;
   border-radius: 8px;
-  margin-top: 40px;
-  padding-bottom: 64px;
-  margin-left: 496px;
-  margin-right: 496px;
-}
-.cta a:hover {
-  align-items: center;
-  border: none;
-  color: #fff;
-  background-color: #DE2E54;
-  transition: color 0.4s ease;
+  padding-top: 40px;
 }
 
-.cta a:active {
-  opacity: 0.6;
+.cta-links-item:not(:last-child) {
+  margin-right: 40px;
 }
 
-.site-footer {
-  width: 1440px;
-  height: 97.94px;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  align-items: center;
+.footer {
   font-family: "Open Sans", sans-serif;
   background-color: #222222;
+}
+
+.sitefooter-content {
+  width: 1100px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 170px;
 }
 
 .logo-link {
@@ -329,17 +312,6 @@ body {
   color: #fff;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   opacity: 0.6;
-}
-
-.sitefooter-content {
-  width: 1100px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  text-decoration: none;
-  margin-right: 170px;
-  margin-left: 170px;
 }
 
 .footer-logo-text {
